adjusted cart routes
